resolve visibility for format images

--- a/webroot/scss/prime.scss
+++ b/webroot/scss/prime.scss
@@ -174,7 +174,7 @@ div.formats {
 		
 		div.image {
 			.dup {
-				@include show-for-only(large);
+				@include show-for(large);
 			}
 			@media only screen { /* small up */
 				@include grid-column-row();
